fixed some collapse navbar code

--- a/src/components/main.css
+++ b/src/components/main.css
@@ -8,4 +8,5 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
+  position: relative;
 }
